--- a/datapacks.html
+++ b/datapacks.html
@@ -1,91 +1,84 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ZC Tech - Data Packs</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #232526, #414345);
-      color: #fff;
-      line-height: 1.6;
-      padding: 2rem;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to bottom, #2c5364, #203a43, #0f2027);
+      color: white;
       text-align: center;
+      margin: 0;
+      padding: 0;
     }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-      background: linear-gradient(90deg, #ff4081, #00d9ff, #ffea00);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+    header {
+      padding: 20px;
     }
-    h2 {
-      font-size: 2rem;
-      margin: 2rem 0 1rem;
-      color: #ffea00;
+    header h1 {
+      font-size: 2em;
+      color: cyan;
+      margin: 0;
     }
-    .card-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1.5rem;
-      margin-top: 1.5rem;
-      max-width: 1000px;
-      margin-inline: auto;
+    header p {
+      font-size: 1.2em;
+      color: yellow;
+      margin: 5px 0 20px 0;
     }
-    .card {
+    .btn {
       display: block;
-      text-decoration: none;
-      background: linear-gradient(135deg, rgba(0, 217, 255, 0.9), rgba(255, 234, 0, 0.9));
-      border-radius: 15px;
-      padding: 1.5rem;
+      margin: 10px auto;
+      padding: 15px;
+      width: 250px;
+      border-radius: 10px;
+      background: linear-gradient(45deg, #ff416c, #ff4b2b, #1e90ff);
+      color: white;
       font-weight: bold;
-      color: #000;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      text-decoration: none;
+      transition: transform 0.2s;
     }
-    .card:hover {
-      transform: scale(1.07);
-      box-shadow: 0 0 20px rgba(255, 64, 129, 0.7);
+    .btn:hover {
+      transform: scale(1.05);
     }
-    .inicio-btn {
+    .volver {
       display: inline-block;
-      margin-top: 2rem;
-      padding: 0.7rem 1.5rem;
-      background: #ff4081;
-      color: #fff;
+      margin-top: 20px;
+      background: yellow;
+      color: black;
+      padding: 10px 20px;
       border-radius: 8px;
-      text-decoration: none;
       font-weight: bold;
-      transition: background 0.3s ease;
+      text-decoration: none;
     }
-    .inicio-btn:hover { background: #ffea00; color: #000; }
     footer {
-      margin-top: 3rem;
-      text-align: center;
-      padding: 1rem;
-      background: rgba(0,0,0,0.7);
-      font-size: 0.9rem;
+      margin-top: 40px;
+      padding: 20px;
+      font-size: 0.9em;
+      background: rgba(0,0,0,0.3);
     }
   </style>
 </head>
 <body>
-  <h1>ZC Tech</h1>
-  <h2>📂 Catálogo de Data Packs</h2>
+  <header>
+    <h1>ZC Tech</h1>
+    <p>Página de Data Packs</p>
+  </header>
 
-  <div class="card-container">
-    <a href="https://drive.google.com/xxxx" target="_blank" class="card">Rōnin FC Pack</a>
-    <a href="https://www.mediafire.com/file/yyyy/team-x-pack.zip/file" target="_blank" class="card">Team X Pack</a>
-    <a href="https://mega.nz/file/zzzz" target="_blank" class="card">Ultimate Mod</a>
-    <a href="https://drive.google.com/aaaa" target="_blank" class="card">Legends Pack</a>
-    <a href="https://www.mediafire.com/file/bbbb/fantasy-pack.zip/file" target="_blank" class="card">Fantasy Pack</a>
-    <a href="https://mega.nz/file/cccc" target="_blank" class="card">Pro Champs Pack</a>
-  </div>
+  <section>
+    <h2>💾 Catálogo de Data Packs</h2>
+    <a href="redir.html?link=https://www.planetminecraft.com/resources/datapacks/" class="btn">Planet Minecraft</a>
+    <a href="redir.html?link=https://vanillatweaks.net/picker/datapacks/" class="btn">Vanilla Tweaks</a>
+    <a href="redir.html?link=https://www.curseforge.com/minecraft/customization" class="btn">CurseForge</a>
+    <a href="redir.html?link=https://modrinth.com/datapacks" class="btn">Modrinth Packs</a>
+    <a href="redir.html?link=https://github.com/topics/minecraft-datapack" class="btn">GitHub Data Packs</a>
+    <a href="redir.html?link=https://www.minecraftmaps.com/datapacks" class="btn">Minecraft Maps</a>
+  </section>
 
-  <a href="index.html" class="inicio-btn">← Volver al Inicio</a>
+  <a href="index.html" class="volver">← Volver al inicio</a>
 
   <footer>
-    <p>© 2025 ZC Tech | Página de Data Packs</p>
+    © 2025 ZC Tech | Página de Data Packs
   </footer>
 </body>
 </html>
