--- a/juegos.html
+++ b/juegos.html
@@ -1,66 +1,87 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ZC Tech - Juegos</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: #fff;
+      background: #0f2027;
+      background: linear-gradient(to bottom, #2c5364, #203a43, #0f2027);
+      color: white;
+      text-align: center;
       margin: 0;
       padding: 0;
-      text-align: center;
     }
     header {
-      padding: 1rem;
+      padding: 20px;
     }
-    h1 {
-      font-size: 2rem;
+    header h1 {
+      font-size: 2em;
       color: cyan;
-      margin: 0.5rem 0;
+      margin: 0;
     }
-    h2 {
+    header p {
+      font-size: 1.2em;
       color: yellow;
-      margin-bottom: 1rem;
+      margin: 5px 0 20px 0;
     }
     .btn {
       display: block;
-      margin: 1rem auto;
-      padding: 1rem;
+      margin: 10px auto;
+      padding: 15px;
       width: 250px;
-      border: none;
-      border-radius: 12px;
-      font-size: 1.1rem;
-      cursor: pointer;
-      color: #fff;
+      border-radius: 10px;
+      background: linear-gradient(45deg, #ff416c, #ff4b2b, #1e90ff);
+      color: white;
+      font-weight: bold;
       text-decoration: none;
-      background: linear-gradient(90deg, #ec4899, #3b82f6);
       transition: transform 0.2s;
     }
     .btn:hover {
       transform: scale(1.05);
     }
     footer {
-      margin-top: 2rem;
-      font-size: 0.9rem;
-      color: #aaa;
+      margin-top: 40px;
+      padding: 20px;
+      font-size: 0.9em;
+      background: rgba(0,0,0,0.3);
+    }
+    .volver {
+      display: inline-block;
+      margin-top: 20px;
+      background: yellow;
+      color: black;
+      padding: 10px 20px;
+      border-radius: 8px;
+      font-weight: bold;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>ZC Tech</h1>
-    <h2>Página de Juegos</h2>
+    <p>Página de Juegos</p>
   </header>
 
-  <main>
+  <section>
+    <h2>🎮 Catálogo de Juegos</h2>
     <a href="redir.html?link=https://www.playstation.com/es-es/god-of-war/" class="btn">God of War</a>
     <a href="redir.html?link=https://store.steampowered.com/app/39140/Final_Fantasy_VII/" class="btn">Final Fantasy VII Remake</a>
     <a href="redir.html?link=https://www.hollowknight.com/" class="btn">Hollow Knight</a>
     <a href="redir.html?link=https://www.leagueoflegends.com/es-es/" class="btn">League of Legends</a>
-  </main>
+  </section><a href="redir.html?link=https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" class="btn">CS:GO</a>
+
+<a href="redir.html?link=https://www.minecraft.net/es-es" class="btn">Minecraft</a>
+</section><a href="redir.html?link=https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" class="btn">CS:GO</a>
+
+<a href="redir.html?link=https://www.minecraft.net/es-es" class="btn">Minecraft</a>
+<section><a href="redir.html?link=https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/" class="btn">CS:GO</a>
+
+<a href="redir.html?link=https://www.minecraft.net/es-es" class="btn">Minecraft</a></section>
+  <a href="index.html" class="volver">← Volver al inicio</a>
 
   <footer>
     © 2025 ZC Tech | Página de Juegos
