--- a/películas.html
+++ b/películas.html
@@ -1,93 +1,84 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ZC Tech - Películas</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #42275a, #734b6d);
-      color: #fff;
-      line-height: 1.6;
-      padding: 2rem;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to bottom, #2c5364, #203a43, #0f2027);
+      color: white;
       text-align: center;
+      margin: 0;
+      padding: 0;
     }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-      background: linear-gradient(90deg, #ff4081, #00d9ff, #ffea00);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+    header {
+      padding: 20px;
     }
-    h2 {
-      font-size: 2rem;
-      margin: 2rem 0 1rem;
-      color: #ffea00;
+    header h1 {
+      font-size: 2em;
+      color: cyan;
+      margin: 0;
     }
-    .card-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1.5rem;
-      margin-top: 1.5rem;
-      max-width: 1000px;
-      margin-inline: auto;
+    header p {
+      font-size: 1.2em;
+      color: yellow;
+      margin: 5px 0 20px 0;
     }
-    .card {
+    .btn {
       display: block;
-      text-decoration: none;
-      background: linear-gradient(135deg, rgba(255, 64, 129, 0.9), rgba(255, 234, 0, 0.9));
-      border-radius: 15px;
-      padding: 1.5rem;
+      margin: 10px auto;
+      padding: 15px;
+      width: 250px;
+      border-radius: 10px;
+      background: linear-gradient(45deg, #ff416c, #ff4b2b, #1e90ff);
+      color: white;
       font-weight: bold;
-      color: #000;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      text-decoration: none;
+      transition: transform 0.2s;
     }
-    .card:hover {
-      transform: scale(1.07);
-      box-shadow: 0 0 20px rgba(0, 217, 255, 0.7);
+    .btn:hover {
+      transform: scale(1.05);
     }
-    .inicio-btn {
+    .volver {
       display: inline-block;
-      margin-top: 2rem;
-      padding: 0.7rem 1.5rem;
-      background: #ff4081;
-      color: #fff;
+      margin-top: 20px;
+      background: yellow;
+      color: black;
+      padding: 10px 20px;
       border-radius: 8px;
-      text-decoration: none;
       font-weight: bold;
-      transition: background 0.3s ease;
+      text-decoration: none;
     }
-    .inicio-btn:hover { background: #ffea00; color: #000; }
     footer {
-      margin-top: 3rem;
-      text-align: center;
-      padding: 1rem;
-      background: rgba(0,0,0,0.7);
-      font-size: 0.9rem;
+      margin-top: 40px;
+      padding: 20px;
+      font-size: 0.9em;
+      background: rgba(0,0,0,0.3);
     }
   </style>
 </head>
 <body>
-  <h1>ZC Tech</h1>
-  <h2>🍿 Catálogo de Películas</h2>
+  <header>
+    <h1>ZC Tech</h1>
+    <p>Página de Películas</p>
+  </header>
 
-  <div class="card-container">
-    <a href="https://www.warnerbros.com/movies/inception" target="_blank" class="card">Inception</a>
-    <a href="https://www.paramount.com/movies/interstellar" target="_blank" class="card">Interstellar</a>
-    <a href="https://www.sonypictures.com/movies/spider-manintothespider-verse" target="_blank" class="card">Spider-Man: Into the Spider-Verse</a>
-    <a href="https://www.studioghibli.com.au/spirit-away/" target="_blank" class="card">El Viaje de Chihiro</a>
-    <a href="https://www.marvel.com/movies/avengers-endgame" target="_blank" class="card">Avengers: Endgame</a>
-    <a href="https://www.warnerbros.com/movies/dark-knight/" target="_blank" class="card">The Dark Knight</a>
-    <a href="https://www.parasite-movie.com/" target="_blank" class="card">Parasite</a>
-    <a href="https://www.lalaland.movie/" target="_blank" class="card">La La Land</a>
-  </div>
+  <section>
+    <h2>🍿 Catálogo de Películas</h2>
+    <a href="redir.html?link=https://www.disneyplus.com/movies/avengers-endgame" class="btn">Avengers: Endgame</a>
+    <a href="redir.html?link=https://www.netflix.com/title/70131314" class="btn">Inception</a>
+    <a href="redir.html?link=https://www.hbomax.com/mx/es/movies/the-dark-knight" class="btn">The Dark Knight</a>
+    <a href="redir.html?link=https://www.paramountplus.com/movies/top-gun-maverick/" class="btn">Top Gun: Maverick</a>
+    <a href="redir.html?link=https://www.netflix.com/title/81293364" class="btn">The Adam Project</a>
+    <a href="redir.html?link=https://www.disneyplus.com/movies/avatar-the-way-of-water" class="btn">Avatar: The Way of Water</a>
+  </section>
 
-  <a href="index.html" class="inicio-btn">← Volver al Inicio</a>
+  <a href="index.html" class="volver">← Volver al inicio</a>
 
   <footer>
-    <p>© 2025 ZC Tech | Página de Películas</p>
+    © 2025 ZC Tech | Página de Películas
   </footer>
 </body>
 </html>
